--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>My About Page</title>
   <meta charset="UTF-8">
@@ -13,76 +14,98 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
-    <!-- My Fonts -->
+  <!-- My Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-171911028-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171911028-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-171911028-1');
-</script>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-171911028-1');
+  </script>
 </head>
-  <body>
-    <nav>
-      <div class="menu-wrap">
-        <input type="checkbox" class="toggler">
-        <div class="hamburger"><div></div></div>
-        <div class="menu">
+
+<body>
+  <nav>
+    <div class="menu-wrap">
+      <input type="checkbox" class="toggler">
+      <div class="hamburger">
+        <div></div>
+      </div>
+      <div class="menu">
+        <div>
           <div>
-            <div>
-              <ul>
-                <li><a href="index.html">Work</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="desktop-nav">
-        <ul>
-          <li><a href="index.html">Work</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-      <header>
-        <a href="index.html">
-          <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
-      </header>
-    </nav>
-        <div class="main-container">
-          <div class="margin">
             <ul>
-              <li><p class="about-top"> As a child, I was lucky enough to be immersed in two different cultures. Language and art have always played such an important part of my life. The way we communicate cross-culturally is important, but oftentimes the message can be misinterpreted. There are words in some languages that don’t have a translation in another, like saudade, in portuguese.</p></li>
-              <li><p>Throughout high school, I began taking both art and multimedia courses and Advanced Spanish courses. I was constantly crafting, drawing, sewing, or working in photoshop and illustrator. I was passionate about design and began thinking about a transition into FIDM for Shoe Design, but at the time I decided to continue with my passion for language and was accepted into the University of California, Santa Barbara for their Global Studies program and study abroad in Brazil. Little did I know at the time that this would be a catalyst that would lead me back to design. My experience in Brazil merges both art and language for me.  Moving to a place where you don’t speak the language forces you to learn how to navigate situations from a new perspective.</p></li>
-            </ul>
-              <hr class="break"><h2 class="italic">This is my a-ha moment!</h2><hr class="break">
-            <ul>
-              <li><p class="top">It was there that I learned the importance of how effective design can help communicate meaning, as well as how ineffective design could negatively impact those seeking help, such as with poorly designed government and healthcare websites. As a designer, my goal is to help bridge the gap between our government and our communities to design better products that provide equal accessibility to all those that are often missed. When I design, my process begins with conducting lots of research and learning about all about the users daily life in order to discover their needs and uncover pain points. From there, I empathize with the users and begin designing and iterating based on user feedback until we reach a final product.
-              </p></li>
+              <li><a href="index.html">Work</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
-        <footer>
-          <h3 class="enlarge">Let's Connect!</h3>
-          <div class="footer-icons">
-            <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
-              <img src="images/linkedin.png" alt="images/linked-in-icon.png" class="social-media"></a>
-            <a href="https://github.com/alanamacedo" target="_blank">
-              <img src="images/github.png" alt="images/facebook-icon.png" class="social-media fb"></a>
-            <a href="contact.html">
-            <img src="images/mail.png" alt="images/email-icon.png" class="social-media"></a>
-          </div>
-          <h6 class="copyright">© Alana Macedo 2020</h6>
-        </footer>
-  </body>
+      </div>
+    </div>
+    <div class="desktop-nav">
+      <ul>
+        <li><a href="index.html">Work</a></li>
+        <li><a class="active" href="about.html">About</a></li>
+        <li><a href="https://drive.google.com/file/d/1v349ufAJdmR_fLsZR1YRuORnOvLvcJYR/view?usp=sharing" target="_blank">Resume</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    <header>
+      <a href="index.html">
+        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
+    </header>
+  </nav>
+  <div class="main-container">
+    <div class="margin">
+      <ul>
+        <li>
+          <p class="about-top"> As a child, I was lucky enough to be immersed in two different cultures. Language and art have always played such an important part of my life. The way we communicate cross-culturally is important, but oftentimes the
+            message can be misinterpreted. There are words in some languages that don’t have a translation in another, like saudade, in portuguese.</p>
+        </li>
+        <li>
+          <p>Throughout high school, I began taking both art and multimedia courses and Advanced Spanish courses. I was constantly crafting, drawing, sewing, or working in photoshop and illustrator. I was passionate about design and began thinking
+            about a transition into FIDM for Shoe Design, but at the time I decided to continue with my passion for language and was accepted into the University of California, Santa Barbara for their Global Studies program and study abroad in
+            Brazil. Little did I know at the time that this would be a catalyst that would lead me back to design. My experience in Brazil merges both art and language for me. Moving to a place where you don’t speak the language forces you to learn
+            how to navigate situations from a new perspective.</p>
+        </li>
+      </ul>
+      <hr class="break">
+      <h2 class="italic">This is my a-ha moment!</h2>
+      <hr class="break">
+      <ul>
+        <li>
+          <p class="top">It was there that I learned the importance of how effective design can help communicate meaning, as well as how ineffective design could negatively impact those seeking help, such as with poorly designed government and
+            healthcare websites. As a designer, my goal is to help bridge the gap between our government and our communities to design better products that provide equal accessibility to all those that are often missed. When I design, my process
+            begins with conducting lots of research and learning about all about the users daily life in order to discover their needs and uncover pain points. From there, I empathize with the users and begin designing and iterating based on user
+            feedback until we reach a final product.
+          </p>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <footer>
+    <h3 class="enlarge">Let's Connect!</h3>
+    <div class="footer-icons">
+      <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
+        <img src="images/linkedin.png" alt="images/linked-in-icon.png" class="social-media"></a>
+      <a href="https://github.com/alanamacedo" target="_blank">
+        <img src="images/github.png" alt="images/facebook-icon.png" class="social-media fb"></a>
+      <a href="contact.html">
+        <img src="images/mail.png" alt="images/email-icon.png" class="social-media"></a>
+    </div>
+    <h6 class="copyright">© Alana Macedo 2020</h6>
+  </footer>
+</body>
+
 </html>
